gallery image pooly stretched bug fixed
fixed #188

--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -293,7 +293,7 @@
     }
 
     &--item {
-      padding: 0.25rem 0.75rem;
+      padding: 0.5rem 2.25rem !important;
       height: auto;
       margin: auto;
       min-width: 40px;
