--- a/assets/sass/pages/_gallery.scss
+++ b/assets/sass/pages/_gallery.scss
@@ -74,9 +74,7 @@
     &__desc {
       position: absolute;
       left: 0;
-      right: 0;
       top: 0;
-      bottom: 0;
       padding: 0.5rem;
       width: 100%;
       height: 100%;
@@ -86,7 +84,6 @@
       font-weight: 700;
       cursor: pointer;
       
-      @include truncate(350px);
       @include box-shadow(0, 0, 0, 0, rgba(0, 0, 0, 0));
       @include on-event {
         @include box-shadow(0, 4px, 4px, 0, rgba(0, 0, 0, 0.4));
@@ -101,6 +98,7 @@
         position: absolute;
         left: 50%;
         top: 50%;
+        word-wrap: break-word;
         
         @include flexbox();
         @include flex-direction(column);
@@ -113,6 +111,13 @@
         &::after {
           content: "➖🔍➖";
         }
+      }
+    }
+
+    @media only screen and (max-width: 600px) {
+      img {
+        object-fit: cover;
+        max-height: 300px;
       }
     }
   }
